fixing whitespace at the bottom of landing page

--- a/index.css
+++ b/index.css
@@ -3,7 +3,6 @@
 }
 
 html{
-    height: 150%;
     background: url('https://sga-inc.net/wp-content/uploads/2017/05/Chalkboard-Background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
